--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
                 <configuration>
                     <suiteXmlFiles>
                         <!--suppress UnresolvedMavenProperty -->
-                        <suiteXmlFile>${suite}</suiteXmlFile>
+                        <suiteXmlFile>single.xml</suiteXmlFile>
                     </suiteXmlFiles>
                 </configuration>
             </plugin>
